[package]
name = "video_streaming_project"
version = "0.1.0"
edition = "2021"
authors = ["fadedreams7 <fadedreams7@email.com>"]
keywords = [ "video_streaming", "partial_streaming", "streaming" ]
categories = ["no-std"]
license-file = "LICENSE"
description = "A Rust library for efficient video streaming with support for partial content delivery."
documentation = "https://github.com/fadedreams/rsstreamslice"
homepage = "https://github.com/fadedreams/rsstreamslice"
repository = "https://github.com/fadedreams/rsstreamslice"

[lib]
name = "video_streaming_lib"
path = "src/lib.rs"

[[bin]]
name = "video_streaming_server"
path = "src/bin/main.rs"

[dependencies]
actix-web = "4.0"
futures = "0.3"
