[package]
name = "rsstreamslice_server"
version = "0.1.0"
edition = "2021"
authors = ["fadedreams7 <fadedreams7@email.com>"]
keywords = ["video_streaming", "partial_streaming", "streaming"]
categories = ["no-std"]
license-file = "LICENSE"
description = "A Rust library for efficient video streaming with support for partial content delivery."
documentation = "https://github.com/fadedreams/rsstreamslice"
homepage = "https://github.com/fadedreams/rsstreamslice"
repository = "https://github.com/fadedreams/rsstreamslice"

[lib]
name = "rsstreamslice_server"
path = "src/lib.rs"

[[bin]]
name = "rsstreamslice_server"
path = "src/bin/main.rs"

[dependencies]
actix-web = "4.0"
futures = "0.3"
