[package]
name = "rsstreamslice_server"
version = "0.1.0"
edition = "2021"
authors = ["fadedreams7 <fadedreams7@email.com>"]
description = "A Rust library for efficient video streaming with support for partial content delivery."
license = "MIT"  # Change this based on your LICENSE file
repository = "https://github.com/fadedreams/rsstreamslice"
documentation = "https://github.com/fadedreams/rsstreamslice"
homepage = "https://github.com/fadedreams/rsstreamslice"
keywords = ["video-streaming", "partial-streaming", "streaming", "actix", "http"]
categories = ["web-programming::http-server", "multimedia::video", "multimedia::audio"]
readme = "README.md"

[lib]
name = "rsstreamslice_server"
path = "src/lib.rs"

[[bin]]
name = "rsstreamslice_server"
path = "src/bin/main.rs"

[dependencies]
actix-web = "4.0"
futures = "0.3"
log = "0.4"
env_logger = "0.9"
